# api_circuits

./: Cargo.toml
.github/workflows/: rust.yml
lib_circuits_wrapper/: CMakeLists.txt  Cargo.toml  build.rs
lib_circuits_wrapper/src/: rust_wrapper.cpp  rust_wrapper.h
src/: circuits_routes.rs
tests/: circuit_gen_endpoint_test.rs
