# [workspace]
# # TODO fix or remove? this looks like it compiles with rust-cxx twice (which kinda makes sense)
# #  fix: move all into api/ to have to top levels folder: api/ and lib_circuits_wrapper/
# members = [
#     ".",
#     # error: package `lib-circuits-wrapper` cannot be tested because it requires dev-dependencies and is not a member of the workspace
#     "./lib_circuits_wrapper"
# ]

[package]
name = "api_circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
tonic-web = "0.9"
prost = "0.11"
# https://github.com/dtolnay/anyhow/issues/250
anyhow = "<1.0.66"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

log = "0.4"
tempfile = "3.6"

tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }

# A recent version is required for the Send trait else
# "the trait `Send` is not implemented for `dyn Future<Output = Result<AddResponse, ipfs_api_backend_hyper::Error>>`"
# https://github.com/ferristseng/rust-ipfs-api/issues/90
# ipfs-api-backend-hyper = "0.3"
ipfs-api-backend-hyper = { version = ">0.5", features = [ "with-send-sync" , "with-builder" ] }

lib-circuits-wrapper = { path = "lib_circuits_wrapper/" }

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tests-utils = { git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main" }

hyper = "0.14"
bytes = "^1.2.0"
tokio-stream = { version = "0.1", features = ["net"] }
base64 = { default-features = false, features = ["alloc"], version = "*" }
